# shiro-chessapi-hs

./: .gitignore  .gitmodules  Chess.html  LICENSE  README.md  chessapi.cabal  chessapi.haddock  chessapi.txt  doc-index.html  doc-index.json  index.html  stack.yaml
c/: compat.c
src/: Chess.Bindings.html  Chess.hs  Chess.html
src/Chess/: Bindings.hs
